src/timeline/SpacerDelegate.qml
@@ -1,0 +1,11 @@
+// SPDX-FileCopyrightText: 2025 James Graham <james.h.graham@protonmail.com>
+// SPDX-License-Identifier: GPL-2.0-only OR GPL-3.0-only OR LicenseRef-KDE-Accepted-GPL
+
+import QtQuick
+
+import org.kde.kirigami as Kirigami
+
+Item {
+    width: parent?.width
+    height: Kirigami.Units.largeSpacing + Math.round(Kirigami.Theme.defaultFont.pointSize * 2)
+}
